unpackaged/main/default/objects/Contact/fields/Last_Texted_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Texted_At__c</fullName>
    <description>DLRS rollup MAX Created Date of Twilio Message associated with the Contact record</description>
    <inlineHelpText>DLRS rollup MAX Created Date of Twilio Message associated with the Contact record</inlineHelpText>
    <label>Last Texted At</label>
    <type>DateTime</type>
</CustomField>