unpackaged/main/default/objects/Contact/fields/Twilio_Message_Count__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Message_Count__c</fullName>
    <description>DLRS Rollup count of all Twilio Messages associated with a Contact record</description>
    <inlineHelpText>DLRS Rollup count of all Twilio Messages associated with a Contact record</inlineHelpText>
    <label>Twilio Message Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>