unpackaged/main/default/objects/Contact/fields/UTMAirtime__c.field-meta.xml
<CustomField>
    <fullName>UTMAirtime__c</fullName>
    <description>Used by TV to represent the amount of airtime an ad has!</description>
    <label>UTM Airtime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>