unpackaged/main/default/objects/Contact/fields/UTMChannel__c.field-meta.xml
<CustomField>
    <fullName>UTMChannel__c</fullName>
    <label>UTM Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>