unpackaged/main/default/objects/Contact/fields/UTMMedium__c.field-meta.xml
<CustomField>
    <fullName>UTMMedium__c</fullName>
    <label>UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>