unpackaged/main/default/objects/Contact/fields/UTMPartner__c.field-meta.xml
<CustomField>
    <fullName>UTMPartner__c</fullName>
    <label>UTM Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>