unpackaged/main/default/objects/Contact/fields/UTMTerm__c.field-meta.xml
<CustomField>
    <fullName>UTMTerm__c</fullName>
    <label>UTM Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>